[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/Popup.tres" type="StyleBox" id=1]
[ext_resource path="res://gui/Victory.gd" type="Script" id=2]

[node name="Victory" type="PopupPanel"]
visible = true
margin_left = 490.0
margin_top = 300.0
margin_right = 300.0
margin_bottom = 57.0
custom_styles/panel = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 246.0
margin_bottom = 56.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 245.0
margin_bottom = 31.0
text = "Player wins!
"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 245.0
margin_bottom = 55.0
alignment = 1

[node name="Rematch" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 68.0
margin_bottom = 20.0
text = "Rematch"

[node name="Title" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 72.0
margin_right = 159.0
margin_bottom = 20.0
text = "Title Screen"

[node name="Quit" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 163.0
margin_right = 245.0
margin_bottom = 20.0
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Rematch" to="." method="_on_Rematch_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Title" to="." method="_on_Title_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
